# TLVisuals

./: .gitignore  README.md  pyproject.toml
src/: outfile
src/tlvisuals/: __main__.py  tlv.py  tlv_parser.py
src/tlvisuals/output_builder/: raw_format.py
src/tlvisuals/tests/: test_parser.py
tests/: test_parser.py  test_raw_format_output_builder.py
tests/input_files/: input.txt
tlvisuals/: __main__.py  tlv.py
tlvisuals/output_builder/: raw_format.py
tlvisuals/tests/: test_bytegetter.py  test_parser.py  test_raw_format_output_builder.py  test_tlv_parser.py
tlvisuals/tlv_parser/: parser.py
